Add missing SETBELL() for WSKBDIO_COMPLEXBELL. wskbd_bell_data structure has value fields and operation bitmask field. "xset b * * 0" doesn't touch period field (and doesn't initialized it) and doesn't set DOPERIOD flag (this means that period field should not be used).  SETBELL() handles this situation appropliately. This happened during copying wsbell.c from wskbd.c. Fix PR xsrc/54245.